added pagination and filter for movies and actors
